resources/gitops-config/operators/cilium/templates/app-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: app-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  addresses:
    - type: "IPAddress"
      value: "10.0.10.241"
  listeners:
    - name: app-http-listener
      protocol: HTTP
      port: 80
      hostname: "*.app.damman.tech"
      allowedRoutes:
        namespaces:
          from: All
    - name: app-https-listener
      protocol: HTTPS
      port: 443
      hostname: "*.app.damman.tech"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-app-gateway-tls-cert
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
