resources/gitops-config/operators/cilium/templates/svc-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: svc-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  addresses:
    - type: "IPAddress"
      value: "10.0.10.240"
  listeners:
    - name: svc-http-listener
      protocol: HTTP
      port: 80
      hostname: "*.svc.damman.tech"
      allowedRoutes:
        namespaces:
          from: All
    - name: svc-https-listener
      protocol: HTTPS
      port: 443
      hostname: "*.svc.damman.tech"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-svc-gateway-tls-cert
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
    - name: svc-tls-passthrough-listener
      protocol: TLS
      port: 8006
      hostname: "pve.svc.damman.tech"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
