resources/gitops-config/operators/cilium/templates/http-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-http-to-https-redirect
  namespace: kube-system
spec:
  parentRefs:
  - name: app-gateway
    namespace: kube-system
    sectionName: app-http-listener
  hostnames:
  - "*.app.damman.tech"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc-http-to-https-redirect
  namespace: kube-system
spec:
  parentRefs:
  - name: svc-gateway
    namespace: kube-system
    sectionName: svc-http-listener
  hostnames:
  - "*.svc.damman.tech"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
