resources/gitops-config/operators/cilium/templates/hubble-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-httproute
  namespace: kube-system
spec:
  parentRefs:
  - name: svc-gateway
    namespace: kube-system
    sectionName: svc-https-listener
  hostnames:
  - hubble.svc.damman.tech
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      request: 0s
    backendRefs:
    - name: hubble-ui
      port: 80
